# libcompanyaddr

./: .gitignore  Makefile.am  Makefile.in  alire.toml  companyaddr.gpr  configure  configure.ac  pwcompanyaddr.gpr
alire/: alire.toml.prev  build_hash_inputs  settings.toml
config/: pwcompanyaddr_config.ads  pwcompanyaddr_config.gpr  pwcompanyaddr_config.h
src/: pwcompanyaddr.ads
src/work/punks/: work-punks-address.adb  work-punks-address.ads  work-punks-company.adb  work-punks-company.ads  work-punks-company_types.ads  work-punks-contact.adb  work-punks-contact.ads
tests/: company_json_test.adb  company_json_test.ads  test_driver.adb  test_lib.adb  test_lib.ads  tests.gpr
